# SLR_PARSER

./: CMakeLists.txt  README.md
include/: follow.h  grammar.h  lexer.h  lr0.h  parser.h  table.h  token.h  token_types.h
src/: follow.cpp  lexer.cpp  lexer.l  lr0.cpp  main.cpp  parser.cpp  slr.cpp  token.cpp
tests/: test_parser.cpp
